--- a/demo/lesson.ipynb
+++ b/demo/lesson.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Lesson name"
    ]
@@ -30,7 +28,7 @@
     }
    ],
    "source": [
-    "print('Hey!')"
+    "print(\"Hey!\")"
    ]
   },
   {
@@ -42,16 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b37ddfde205f0938",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
+   "metadata": {},
    "source": [
     "#### TODO: Triangle perimeter"
    ]
@@ -66,25 +55,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b791b685d2eb9689",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_perimeter(a: float, b: float, c: float) -> float:\n",
     "    \"\"\"Get triangle perimeter.\n",
     "\n",
-    "    :param a: first triangle side.\n",
-    "    :param b: second triangle side.\n",
-    "    :param c: third triangle side.\n",
-    "    :return: perimeter.\n",
+    "    Args:\n",
+    "        a: First triangle side.\n",
+    "        b: Second triangle side.\n",
+    "        c: Third triangle side.\n",
+    "\n",
+    "    Returns:\n",
+    "        Perimeter.\n",
     "    \"\"\"\n",
     "    # Write your code instead of None\n",
     "    perimeter = None\n",
@@ -97,17 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-059ec36d3798e24a",
-     "locked": true,
-     "points": 100,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -120,7 +93,7 @@
    "source": [
     "# Check\n",
     "perimeter = get_perimeter(3, 4, 5)\n",
-    "print(f'Perimeter of triangle with sides 3, 4, 5: {perimeter}')\n",
+    "print(f\"Perimeter of triangle with sides 3, 4, 5: {perimeter}\")\n",
     "### BEGIN HIDDEN TESTS\n",
     "assert get_perimeter(5, 5, 5) == 15\n",
     "assert get_perimeter(2, 3, 4) == 9\n",
@@ -136,16 +109,16 @@
     "\n",
     "Perimeter of triangle with sides 3, 4, 5: 12\n",
     "\n",
-    "---"
+    "---\n"
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "PyCharm (python_course)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pycharm-1f8fb675"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -157,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
